# daemon-engine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: camera.c.DDB22D93571B320A.idx  camera.h.AD6C749DD51AB580.idx  glad.c.653466ABEBA8F20A.idx  glad.h.711B655DA8CD1C37.idx  input.c.ACDD357B015298B5.idx  input.h.32887A90841D1255.idx  khrplatform.h.7C87DF71C33BD481.idx  main.c.5E2DE4F51CE61DC7.idx  mat4.h.DF5C177B341C5D6B.idx  renderer.c.BA4C112411246644.idx  renderer.h.476264F5DFB9524A.idx  shader.c.1A058D5EADD6AC74.idx  shader.h.48DF818BE9E0121C.idx  time.c.57E5CC1F2D3A78CC.idx  time.h.9FEBFFF8E875E543.idx  vec3.h.4852BDED3BAF733D.idx
src/: camera.c  camera.h  input.c  input.h  main.c  renderer.c  renderer.h  time.c  time.h
src/game/: player.c  player.h
src/geom/: geom2d.c  geom2d.h  sector_mesh.c  sector_mesh.h  wall_mesh.c  wall_mesh.h
src/gfx/: shader.c  shader.h
src/map/: map.c  map.h
src/math/: mat4.h  vec2.h  vec3.h
